ingress/service-myapp.yaml
# 定义一个service
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp
    release: beta
  ports:
  - name: http
    targetPort: 80
    port: 80
---
# deployment控制器使用
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  namespace: default
spec: 
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      release: beta
  template:
  # 下方为pod模板
    metadata:
      name: myapp-pod
      labels:
        app: myapp
        release: beta
    spec:
      containers:
      - name: myapp-container
        image: ikubernetes/myapp:v1
        ports:
        - name: http
          containerPort: 80
