ingress/ingress-myapp.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ingress-myapp
 namespace: default
 annotations:
  kubernetes.io/ingress.class: "nginx"
  # nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  # 定义规则以注入到nginx.conf配置中
  - host: myapp.com
    http:
      paths:
        - path: 
          backend:
            serviceName: myapp
            servicePort: 80
